src/test/resources/valid_programs/if_else__if_branch_executes.notc
void main() {
    if (true)
        printInt(5);
    else
        printInt(0);
}
