src/test/resources/semantic_errors/redecl_same_stm.notc
void main() {
    bool b, b;
}
